# tools

./: README.md  project.md  pyproject.toml
.github/workflows/: README.md  tests.yml
examples/: README.md
examples/langgraph/: .env.example  erc20_block_example.py  main.py
examples/mcp/: erc20_block_example.py  main-sse.py  main.py
src/lomen/: cli.py
src/lomen/adapters/: __init__.py  langchain.py  mcp.py
src/lomen/plugins/: __init__.py  base.py
src/lomen/plugins/blockchain/: __init__.py  chains.json
src/lomen/plugins/blockchain/tools/: __init__.py  blockchain_metadata.py
src/lomen/plugins/erc20/: __init__.py  tools.py
src/lomen/plugins/evm_rpc/: __init__.py  parameters.py  utils.py
src/lomen/plugins/evm_rpc/tools/: __init__.py  get_block.py  get_block_number.py
src/lomen/plugins/oneinch/: __init__.py
src/lomen/plugins/oneinch/tools/: get_address_from_domain.py  get_nfts.py  get_portfolio.py  get_profit_and_loss.py  get_protocol_investments.py  get_token_info.py
tests/: conftest.py
tests/lomen/adapters/: test_langchain.py  test_mcp.py
tests/lomen/plugins/: test_base.py
tests/lomen/plugins/blockchain/tools/: test_blockchain_metadata.py
tests/lomen/plugins/erc20/: test_tools.py
tests/lomen/plugins/evm_rpc/tools/: test_get_block.py  test_get_block_number.py
