[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lomen"
version = "0.1.0"
authors = [
    {name = "Lomen Development Team", email = "example@example.com"},
]
description = "Plugin-based framework for blockchain/web3 tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "web3>=6.0.0"
]

[project.urls]
"Homepage" = "https://github.com/username/lomen"
"Bug Tracker" = "https://github.com/username/lomen/issues"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
